--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,8 +6,3 @@ $black: #000000;
 $gray: #9e9e9e;
 $red: #ff0000;
 $dark-red: #794444;
-
-@mixin f {
-  display: flex;
-}
- 
